# graphql-rust

./: .dockerignore  .gitmodules  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
src/: main.rs
