[package]
name = "graphql-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = { version = "0.21.0" }
bytes = { version = "1.3.0" }
http-body-util = { version = "0.1.0-rc.2" }
hyper = { version = "1.0.0-rc.2", features = ["full"] }
juniper = { version = "0.16.0-dev", path = "./vendor/juniper/juniper" }
juniper_hyper = { version = "0.9.0-dev", path = "./vendor/juniper/juniper_hyper" }
serde = { version = "1.0.152", features = ["derive"]}
serde_json = { version = "1.0.91" }
tokio = { version = "1.24.1", features = ["full"] }

[dev-dependencies]
pretty_env_logger = { version = "0.4" }
