[package]
name = "graphql-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.68" }
base64 = { version = "0.21.0" }
juniper = { version = "0.16.0-dev", path = "./vendor/juniper/juniper" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
tokio = { version = "1.24.1", features = ["full"] }
axum = { version = "0.6.2", default-features = false, features = [
	"macros",
	"headers",
	"http2",
	"http1",
	"json",
	"tokio",
	"tower-log",
	"query",
] }

[dev-dependencies]
pretty_env_logger = { version = "0.4" }
